2009-6-10 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.07-4
   * R/mi.pooled: fix a bug in mi.pooled (B term)

2009-6-10 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.07-3

2009-6-8 Yu-Sung Su     <ys463@columbia.edu>  
   * R/display: display the pooled estimates in the last order.
   * R/mi.continuous: fix a bug in draws.from.beta ($beta -> $coef)
   * R/mi.count: fix a bug in draws.from.beta ($beta -> $coef)
   * R/mi.binary: fix a bug in draws.from.beta ($beta -> $coef)


2009-5-4 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.07-2
   * new function: write.mi


2009-4-28 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.07-1
   * rename mi.dichotomous to mi.binary
   * rename correlated slot to collinear
   * rename continue.on.convergence to run.past.convergence


2009-4-22 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.06-5
   * redesign formulas
   * R/mi.info: fix a bug in mi.correlated.list

2009-4-18 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.06-2
   * R/mi: fix a bug in the print out of the process
   * R/mi.info: update.mi.info: revise formula when type is updates as 
      ordered or unorderd categorical type.

2009-4-16 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.06-1   
   * R/mi.preprocess: fix bugs in mi.postprocess()
   * R/mi: fix bugs in mi.data.frame (was not using rho for mi.copy)
   * R/mi.correlated.list: if missing pattern are different in both 
      correlated variables, treat this as structured correlation

2009-4-12 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.05-1   
   * R/mi.preprocess: new mi.preprocess and mi.postprocess
   * add "log-contiunous" variable type

2009-4-7 Yu-Sung Su     <ys463@columbia.edu>  
   * man/mi.pooled: new doc for mi.pooled
   * R/AllClass: mi.lm, mi.glm, mi.mer are obsoleted