@@ -3,7 +3,7 @@
 # ==============================================================================
 
 mi.continuous <- function ( formula, data = NULL, start = NULL, 
-                            n.iter = 100, draw.from.beta = FALSE, ...  ) {
+                            n.iter = 100, draw.from.beta = TRUE, ...  ) {
   call <- match.call()
   mf   <- match.call(expand.dots = FALSE)
   m    <- match(c("formula", "data"), names(mf), 0)
