@@ -19,7 +19,7 @@
 }
 \usage{
 mi.binary(formula, data = NULL, start = NULL, n.iter = 100, 
-  draw.from.beta = FALSE, \dots)
+  draw.from.beta = TRUE, \dots)
 \S4method{resid}{mi.binary}(object, y)
 \S4method{residuals}{mi.binary}(object, y)
 \S4method{plot}{mi.binary,ANY}( x, y, main=deparse( substitute( y ) ), gray.scale = FALSE, \dots)
